fixes bug of too small scroll content

--- a/src/web/src/app/shared/components/scenario/scenario.component.css
+++ b/src/web/src/app/shared/components/scenario/scenario.component.css
@@ -56,7 +56,7 @@ div.developer-links > a:hover {
 
 .actual-content {
     background: #fff;
-    min-height: 20rem;
+    min-height: 30rem;
     width: 99%;
     float: left;
 }
